--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">
       <div class="header">
-        <span class="title">Simple Blog on Blockchain</span>
+        <span class="title">Simple CoreDigger Blog on Blockchain</span>
       </div>
       <div class="post-article-box">
         <div class="post-article-title">
@@ -27,7 +27,7 @@
           ></div>
         </div>
         <div class="post-article-button">
-          <input type="button" id="postToEthereum" value="Summit" />
+          <input type="button" id="postToEthereum" value="Post" />
         </div>
       </div>
       <div class="articles"></div>
